<resources>
    <string name="app_name">多好玩</string>
    <string name="icon_user">&#xe619;</string>
    <string name="icon_psw">&#xe6aa;</string>
    <string name="icon_back">&#xe749;</string>
    <string name="icon_phone">&#xe63f;</string>
    <string name="icon_share">&#xe60c;</string>

    <string name="login">登录</string>
    <string name="forgetpsw">忘记密码？</string>
    <string name="thirdlogin">第三方账号登录</string>
    <string name="regester">注册账号</string>
    <string name="title_activity_regester">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="phonePath">fonts/phone.ttf</string>
    <string name="regestor">注册</string>
    <string name="home">首页</string>
    <string name="seach">搜索</string>
    <string name="follow">关注</string>
    <string name="my">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
