<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:navigationIcon="@drawable/icon_back"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/icon_back">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:text="手机注册"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black1" />

    <com.hd.wlj.duohaowan.view.ImgInpImg
        android:id="@+id/regester_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        app:edittext_background_isnull="true"
        app:edittext_hit="请输入11位手机号码"
        app:iconfont1_color="@color/black"
        app:iconfont1_text="@string/icon_phone"
        app:iconfont2_text="发送验证码" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="21dp"
            android:layout_height="46dp"
            android:layout_marginLeft="4dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_verify" />

        <EditText
            android:id="@+id/regester_verifyCode"
            style="@style/text_base"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入短信验证码" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black2" />

    <com.hd.wlj.duohaowan.view.ImgInpImg
        android:id="@+id/regester_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        app:edittext_background_isnull="true"
        app:edittext_hit="请设置密码（6-16位字母数字）"
        app:iconfont1_color="@color/black"
        app:iconfont1_text="@string/icon_psw" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black2" />

    <LinearLayout
        android:id="@+id/regester_repsw_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.hd.wlj.duohaowan.view.ImgInpImg
            android:id="@+id/regester_repsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            app:edittext_background_isnull="true"
            app:edittext_hit="请再次确认密码"
            app:iconfont1_color="@color/black"
            app:iconfont1_text="@string/icon_psw" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black2" />
    </LinearLayout>


    <Button
        android:id="@+id/regester_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/black"
        android:padding="18dp"
        android:text="@string/regestor"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
